--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,23 @@
-різна підсвітка для букв лого
-антиспам-фільтр на вхід і реєстрацію
-
 логіка попапів
 структура додатку: мобільна і десктопна версії
+
++ контакти
++список чатів
+новий груповий чат
+чорний список
++налаштування
+    змінити аватарку
+    змінити ім'я
+    змінити пароль
+    кольорова тема
+    мова
+    видалити акаунт
+вийти з програми
+
+
+різна підсвітка для букв лого
+антиспам-фільтр на вхід і реєстрацію
+вибір мови на login/register
 
 двомовність
 завантаження аватарки
