шкури готові (крім попапів)

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,9 @@
 логіка попапів
 структура додатку: мобільна і десктопна версії
 
+у моб. версії subheader можк бути, а можі і ні. Перерахунов висоти .left-side! height: calc(100% - 60px);
+
+
 + контакти
 +список чатів
 новий груповий чат
@@ -17,7 +20,6 @@
 
 різна підсвітка для букв лого
 антиспам-фільтр на вхід і реєстрацію
-вибір мови на login/register
 
 двомовність
 завантаження аватарки
