шкури для попапів

--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,34 @@
 логіка попапів
-структура додатку: мобільна і десктопна версії
 
-у моб. версії subheader можк бути, а можі і ні. Перерахунов висоти .left-side! height: calc(100% - 60px);
+іконки по лівому краю обрізані
+
+i.ico
+
+у моб. версії subheader може бути, а може і ні. Перерахунов висоти .left-side! height: calc(100% - 60px);
 
 
 + контакти
 +список чатів
-новий груповий чат
-чорний список
+новий груповий чат     // popup
+чорний список          // popup
 +налаштування
-    змінити аватарку
-    змінити ім'я
-    змінити пароль
-    кольорова тема
-    мова
-    видалити акаунт
-вийти з програми
+    змінити аватарку   // popup
+    змінити ім'я       // popup
+    змінити пароль     // popup
+    кольорова тема     // popup
+    мова               // popup
+    видалити акаунт    // popup
+вийти з програми       // popup
 
+groupcard
+  покинути групу       // popup
+  подивитися учасників // popup
+  редагувати групу     // popup
+  видалити групу       // popup
+  очистити історію     // popup
+
+usercard
+  очистити історію     // popup
 
 різна підсвітка для букв лого
 антиспам-фільтр на вхід і реєстрацію
@@ -24,3 +36,6 @@
 двомовність
 завантаження аватарки
 передача файлів
+
+api показу сповіщень при згорнутому браузері в операційній системі
+зміна favico, якщо з'явились пові повідомлення
