--- a/todo.txt
+++ b/todo.txt
@@ -4,27 +4,27 @@
 
 у моб. версії subheader може бути, а може і ні. Перерахунов висоти .left-side! height: calc(100% - 60px);
 
-
-+ контакти
-+список чатів
-новий груповий чат     // popup
-чорний список          // popup
-+налаштування
-    змінити аватарку   // popup
-    змінити ім'я       // popup
-    змінити пароль     // popup
-    кольорова тема     // popup
-    мова               // popup
-    видалити акаунт    // popup
-вийти з програми       // popup
-groupcard
-  покинути групу       // popup
-  подивитися учасників // popup
-  редагувати групу     // popup
-  видалити групу       // popup
-  очистити історію     // popup
-usercard
-  очистити історію     // popup
+попапи
+  + контакти
+  +список чатів
+  новий груповий чат     // popup
+  чорний список          // popup
+  +налаштування
+      змінити аватарку   // popup
+      змінити ім'я       // popup
+      змінити пароль     // popup
+      кольорова тема     // popup
+      мова               // popup
+      видалити акаунт    // popup
+  вийти з програми       // popup
+  groupcard
+    покинути групу       // popup
+    подивитися учасників // popup
+    редагувати групу     // popup
+    видалити групу       // popup
+    очистити історію     // popup
+  usercard
+    очистити історію     // popup
 
 різна підсвітка для букв лого
 антиспам-фільтр на вхід і реєстрацію
