в gulpfile : index: 'front.html', статику опустив під роути

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
+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
+========================================
 логіка попапів
-
-іконки по лівому краю обрізані
 
 у моб. версії subheader може бути, а може і ні. Перерахунов висоти .left-side! height: calc(100% - 60px);
 
@@ -34,4 +34,4 @@
 передача файлів
 
 api показу сповіщень при згорнутому браузері в операційній системі
-зміна favico, якщо з'явились пові повідомлення
+зміна favico, якщо з'явились нові повідомлення
