запити до сервера виніс в окремий файл. Треба наводити порядок в клієнтському js

--- a/todo.txt
+++ b/todo.txt
@@ -40,6 +40,9 @@ api показу сповіщень при згорнутому браузері
 пароля, щоб за потреби не міняти усе в коді в багатьох сісцях, а тільки в одному
 файлі
 
+в файлах, які відповідають за валідацію, бардак: форми з popup.html
+перевіряються функціями з login.js
+
 - в консоль випадає помилка: Uncaught SyntaxError: redeclaration of const roles,
   яка чомусь вказує на перний рядок файла my_chat/app/public/js/main.js
   Якщо у файлі my_chat/app/public/js-expanded/login.js:
