навів відностий порядок у клієнтському js

--- a/todo.txt
+++ b/todo.txt
@@ -51,6 +51,9 @@ api показу сповіщень при згорнутому браузері
     const roles -> var roles
   помилка пропадає, хоча настравді ніякої передекларації не існує.
 
+- на майбутні проекти: логіка попапів - тільки відкриття/закриття, а все інше -
+  це форми: валідація, відслідковування сабмітів, змін в полях тощо. Зараз просто
+  не хочу по десять разів правити код і перейменовувати функції
 
 ? в mongoose при зміні пароля (це віртуальне поле моделі) метод
 User.findByIdAndUpdate не спрацьовував. Довелося використовувати з'вязку
