--- a/todo.txt
+++ b/todo.txt
@@ -55,6 +55,9 @@ api показу сповіщень при згорнутому браузері
   це форми: валідація, відслідковування сабмітів, змін в полях тощо. Зараз просто
   не хочу по десять разів правити код і перейменовувати функції
 
+- на майбутні проекти: у формах потрібно створити такий js, щоб він валідаційні
+  параметри приймав з data-attr в html-тегах
+
 ? в mongoose при зміні пароля (це віртуальне поле моделі) метод
 User.findByIdAndUpdate не спрацьовував. Довелося використовувати з'вязку
 User.findById - user.set - user.save
