--- a/todo.txt
+++ b/todo.txt
@@ -51,7 +51,7 @@ api показу сповіщень при згорнутому браузері
     const roles -> var roles
   помилка пропадає, хоча настравді ніякої передекларації не існує.
 
-- проблеми при пошуку тексту в полях колекції. Випадають різні помилки, напрю:
++ проблеми при пошуку тексту в полях колекції. Випадають різні помилки, напрю:
   MongoError: text index required for $text query
   такий код не працює:
   let collection = db.collection('users');
@@ -72,6 +72,10 @@ api показу сповіщень при згорнутому браузері
   }
   спроба стаорити індекс через компас видає помилку:
   Index build failed: 21ca888b-e770-4a8d-858b-10c405361f14: Collection my-cha-cha.users ( 2fe116a2-ac79-4375-8fe2-7f54d085e110 ) :: caused by :: language override unsupported: ua
+  ВИРІШЕНО. Проблема була в тому, що був не правильно скомпільований html-файл:
+  в нього двічі вписувався скрипт, який відповідно двічі спрацьовував і двічі
+  генерував подію на кнопці, двічі звертався до бази. При першому виклику усе
+  відпрацьовувало, як треба, а другий раз генерилась помилка.
 
 - на майбутні проекти: логіка попапів - тільки відкриття/закриття, а все інше -
   це форми: валідація, відслідковування сабмітів, змін в полях тощо. Зараз просто
