--- a/todo.txt
+++ b/todo.txt
@@ -1,43 +1,59 @@
 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
 ========================================
-логіка попапів
 
-у моб. версії subheader може бути, а може і ні. Перерахунов висоти .left-side! height: calc(100% - 60px);
+логіка переписки:
+1. Завантаження починається з чатів, а не контактів:
+   - розраховуються badge, статуси, повідомлення
 
-попапи
-  + контакти
-  +список чатів
-  новий груповий чат     // popup
-  чорний список          // popup
-  +налаштування
-      змінити аватарку   // popup
-      змінити ім'я       // popup
-      змінити пароль     // popup
-      кольорова тема     // popup
-      мова               // popup
-      видалити акаунт    // popup
-  вийти з програми       // popup
-  groupcard
-    покинути групу       // popup
-    подивитися учасників // popup
-    редагувати групу     // popup
-    видалити групу       // popup
-    очистити історію     // popup
-  usercard
-    очистити історію     // popup
++ 2. Відкриття конкретного чату:
+   - якщо нема не прочитаних повідомлень - прокрутити до самого низу (якщо треба)
+   - якщо є не прочитані повідомлення - прокрутити до моменту, коли перше не
+     прочитане повідомлення буде внизу видимої області, зменшити badge на 1
+   - якщо не прочитані повідомлення видні одразу - усі вони повинні стати,
+     прочитаними, корекція badge
+   - кнопка прокрутки вниз
 
+3. Прокрутка чату:
+   - по мірі появи не прочитаних повідомлень змінювати їх статус, корекція badge
+
++ 4. Вхідне повідомлення
+   a) чат -, список чатів -: нічого не робити
+   б) чат -, список чатів +: змінити дату, повідомлення, badge
+   в) чат +, список чатів -: якщо нема не прочитаних повідомлень - додати
+                             повідомлення, прокрутити (якщо треба), змінити
+                             статус на прочитаний
+                             якщо є не прочитані повідомлення - тільки додати
+                             повідомлення в кінець
+   г) чат +, список чатів +: якщо нема не прочитаних повідомлень - додати
+                             повідомлення, прокрутити (якщо треба), змінити
+                             статус на прочитаний
+                             якщо є непрочитані - додати повідомлення в кінець,
+                             у списку змінити дату, текст і badge
+
++ 5. Власне повідомлення
+
+!!! коректний час у повідомленнях: на сервері зберігається utc-0, на клієнті іде
+    конверт/деконверт
+    якщо в процесі переписки повідомлення приходить уже в нову добу, потрібно
+    додати полоску з новою датою
+
+========================================
+
+активація поля для написання повідомлення -> прокрутка донизу (якщо потрібно), усі повідомлення отримують статус read, обнуляється лічильник
 різна підсвітка для букв лого
 антиспам-фільтр на вхід і реєстрацію
-
 двомовність
-завантаження аватарки
 передача файлів
-
 api показу сповіщень при згорнутому браузері в операційній системі
 зміна favico, якщо з'явились нові повідомлення
+"хтось щойно увійшов під вашим паролем"
+баг: в пошуку можна знайти самого себе і додати в контакти
+при видаленні чату одним зі співрозмовників у другого співрозмовника теж повинна чиститись переписка
+При додаванні контакта потрібно генерити новий сокет для спілкування з ним
+При видаленні людини з групи потрібно обривати його сокет
 
 створити front-config.js, в якому будуть дані напр. про мінімальну довжину
-пароля, щоб за потреби не міняти усе в коді в багатьох сісцях, а тільки в одному
+пароля, щоб за потреби не міняти усе в коді в багатьох місцях, а тільки в одному
 файлі
 
 в файлах, які відповідають за валідацію, бардак: форми з popup.html
@@ -51,7 +67,7 @@ api показу сповіщень при згорнутому браузері
     const roles -> var roles
   помилка пропадає, хоча настравді ніякої передекларації не існує.
 
-+ проблеми при пошуку тексту в полях колекції. Випадають різні помилки, напрю:
++ проблеми при пошуку тексту в полях колекції. Випадають різні помилки, напр.:
   MongoError: text index required for $text query
   такий код не працює:
   let collection = db.collection('users');
@@ -70,7 +86,7 @@ api показу сповіщень при згорнутому браузері
     required: true,
     text: true
   }
-  спроба стаорити індекс через компас видає помилку:
+  спроба створити індекс через компас видає помилку:
   Index build failed: 21ca888b-e770-4a8d-858b-10c405361f14: Collection my-cha-cha.users ( 2fe116a2-ac79-4375-8fe2-7f54d085e110 ) :: caused by :: language override unsupported: ua
   ВИРІШЕНО. Проблема була в тому, що був не правильно скомпільований html-файл:
   в нього двічі вписувався скрипт, який відповідно двічі спрацьовував і двічі
