зміна статусу повідомлення при прокрутці

--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,7 @@ 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
      прочитаними, корекція badge
    - кнопка прокрутки вниз
 
-3. Прокрутка чату:
++ 3. Прокрутка чату:
    - по мірі появи не прочитаних повідомлень змінювати їх статус, корекція badge
 
 + 4. Вхідне повідомлення
@@ -31,6 +31,8 @@ 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
                              у списку змінити дату, текст і badge
 
 + 5. Власне повідомлення
+
+6. статус про прочитання
 
 !!! коректний час у повідомленнях: на сервері зберігається utc-0, на клієнті іде
     конверт/деконверт
