socket: message read

--- a/todo.txt
+++ b/todo.txt
@@ -33,6 +33,7 @@ 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
 + 5. Власне повідомлення
 
 6. статус про прочитання
+7. групові чати
 
 !!! коректний час у повідомленнях: на сервері зберігається utc-0, на клієнті іде
     конверт/деконверт
