обмін повідомленнями, правильний скрол, зміна статусів готові, залишилася правка часу повідомлення

--- a/todo.txt
+++ b/todo.txt
@@ -32,7 +32,7 @@ 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
 
 + 5. Власне повідомлення
 
-6. статус про прочитання
++ 6. статус про прочитання
 7. групові чати
 
 !!! коректний час у повідомленнях: на сервері зберігається utc-0, на клієнті іде
@@ -41,6 +41,8 @@ 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
     додати полоску з новою датою
 
 ========================================
+
+таке враження, що на телефонах не спрацьовує подія onscroll: на компі відправка і прийом повідомлень працюють коректно, а на телефоні статуси про прочитання не спрацьовують і прокрутка не відбувається.
 
 активація поля для написання повідомлення -> прокрутка донизу (якщо потрібно), усі повідомлення отримують статус read, обнуляється лічильник
 різна підсвітка для букв лого
